manifests/cloud/nextcloud/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud
  name: nextcloud
  namespace: cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - image: library/nextcloud
        name: nextcloud
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nextcloud-appdata
          mountPath: /config
      volumes:
        - name: nextcloud-appdata
          persistentVolumeClaim:
            claimName: nextcloud-appdata
