manifests/cloud/nextcloud/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app: nextcloud
  namespace: cloud
spec:
  selector:
    app: nextcloud
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
