manifests/cloud/nextcloud/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  labels:
    app: nextcloud
  namespace: cloud
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    flame.pawelmalak/type: application
    flame.pawelmalak/name: Cloud
    flame.pawelmalak/url: https://cloud.cafio.co/
    flame.pawelmalak/icon: cloud
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cloud.cafio.co
    secretName: cafio.co-tls
  rules:
  - host: cloud.cafio.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
